@@ -585,6 +585,7 @@ Change list for PernMangband
 2/1/2001 (Yakina [note by Jir])
 - some fixes on win32-client.
 - bugfixes, and extern.h cleanup.
+- win32-server runs *confortably* now.
 
 2/1/2001 (Jir)
 - 'cleverer' monster spells. (set STUPID_MONSTERS if it's too slow)
